# flamingols

./: Cargo.toml  README.md  dune-project
.github/workflows/: formatting.yml
lib/: dune
src/: main.rs
test/: dune
